--- a/views/user/myaccount.ejs
+++ b/views/user/myaccount.ejs
@@ -293,18 +293,13 @@
                                             <% } %>
                                           
                                              <!-- Pagination Controls -->
-                                             <div id="pagination-controls">
+                                             <!-- <div id="pagination-controls">
                                                 <button id="prev-page" onclick="prevPage()">Previous</button>
                                                 <span id="page-info"></span>
                                                 <button id="next-page" onclick="nextPage()">Next</button>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         
-                                    
-                                        <div class="wallet-action">
-                                            <button class="btn btn-primary" id="add-money-button" style="width: 150px;">Add Money</button>
-                                            <button class="btn btn-danger" id="withdraw-button" style="width: 150px;">Withdraw</button>
-                                        </div>
                                     </div>
                                     
                                 </div>
